--- a/style.css
+++ b/style.css
@@ -1,4 +1,151 @@
-body {
-  font-family: 'Poppins', sans-serif;
+* {
+  font-family: "Poppins", sans-serif;
   margin: 0;
+  padding: 0;
+}
+/* First section start */
+.top-banner {
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(to bottom, #2c2c2c85, #000000ba),
+    url("images/donation3.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+.top-banner-text {
+  width: 50%;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.top-banner-text h1 {
+  font-size: 50px;
+}
+.top-button {
+  text-decoration: none;
+  color: #fff;
+  background-color: red;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+.top-banner-text p {
+  padding-bottom: 30px;
+}
+/* First section done */
+/* 2nd section start */
+.donate-today {
+  position: relative;
+  width: 100%;
+}
+.donate-td-text {
+  text-align: center;
+  margin-top: 80px;
+  margin-bottom: 60px;
+}
+.donate-amount {
+  display: flex;
+  margin-left: 15%;
+  margin-bottom: 40px;
+}
+.donate-price {
+  width: 10%;
+  background-color: rgb(239, 239, 239);
+  padding: 40px 5px 40px 60px;
+  margin: 10px;
+}
+#special {
+  border: 2px solid rgb(255, 0, 0);
+  background-color: rgb(255, 198, 198);
+}
+#special h2 {
+  color: rgb(255, 0, 0);
+}
+.donate-td-button {
+  text-align: center;
+}
+.donate-td-button h4 {
+  color: rgb(109, 109, 109);
+  padding-bottom: 5px;
+}
+.donate-td-button hr {
+  margin-bottom: 15px;
+  width: 70%;
+  margin-left: 15%;
+  color: #f4f4f4;
+}
+/* End donate today */
+.d-plan {
+  display: flex;
+  margin-left: 16%;
+}
+.plan {
+  width: 20%;
+  padding: 30px 35px;
+  margin: 0 10px;
+}
+.f-plan {
+  background-color: #ffd6d6;
+}
+.e-plan {
+  background-color: #fff5d6;
+}
+.s-plan {
+  background-color: #eaceff;
+}
+.box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.f-box {
+  padding: 60px 130px;
+  background-color: rgb(255, 245, 169);
+  border-radius: 5px;
+  box-shadow: 10px 10px 15px #ececec;
+  margin-bottom: 30px;
+}
+.f-box input {
+  font-size: 20px;
+  border: none;
+  outline: none;
+  padding: 5px 10px;
+  background-color: #ececec;
+}
+.f-box button {
+  font-size: 20px;
+  border: none;
+  outline: none;
+  background-color: rgb(255, 53, 53);
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+.ft-section {
+  text-align: center;
+  background-color: #000000;
+  color: #fff;
+  padding: 40px 0;
+}
+.ft-section h2 {
+  color: red;
+}
+.ft-section p {
+  font-size: 10px;
+}
+/* img g */
+
+.img-box {
+  display: flex;
+}
+.dream {
+  width: 10%;
+  margin: 10px 10px;
+}
+.dream img {
+  width: 300px;
 }
