--- a/style.css
+++ b/style.css
@@ -141,11 +141,12 @@
 
 .img-box {
   display: flex;
+  width: 80%;
+  margin-left: 10%;
 }
 .dream {
-  width: 10%;
-  margin: 10px 10px;
+  width: 50%;
 }
 .dream img {
-  width: 300px;
+  width: 95%;
 }
